# LanguageDeterminer

./: CMakeLists.txt  README.md  linuxScript.sh  main.cpp
Algorithm/: Algorithm.cpp  Algorithm.h  CMakeLists.txt
Header/: Algorithm.h  Perceptron.h
NeuralAlgorithm/: CMakeLists.txt  Nalgorithm.cpp  Nalgorithm.h
Perceptron/: CMakeLists.txt  Perceptron.cpp  Perceptron.h
Resources/TestCases/: Czech  English  Polish
Resources/ToTest/: Text
Source /: Algorithm.cpp  Perceptron.cpp  main.cpp
